$Id: History,v 1.44 2002-11-01 23:40:14 asaim Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Nov 01, 2002, M.Asai (tracking-V04-01-04)
- Merge tracking-V04-01-03 and tracking-V04-01-02.

Nov 1, 2002, J.Allison  (tracking-V04-01-03 - does not include V04-01-02)
- Canonical tag of traj03 (see below).

Oct 31, 02 T. Sasaki (tracking-V04-01-02)
- G4SteppingManager.hh/cc
 o new ForceCondition flag StronglyForced was implemented

Oct 28, 2002, J.Allison  (traj03)
- Changed GetAttDefs return signature to map.
- Changed GetAttValues to CreateAttValues.
- Improved descriptions.

Oct 24, 02 J.Allison (traj02)
- Implemented simple versions of G4Trajectory::GetAttDefs/Values.

Oct 16, 02 J.Allison (traj01)
- Added GetAttDefs to G4VTrajectory, etc., and small corrections.

Sep 03, 02 M.Asai
- Start working for trajectory related issues
  o Modification made : G4VTrajectory, G4VTrajectoryPoint, G4Trajectory, G4TrajectoryPoint
  o Introduced : G4SmoothTrajectory, G4SmoothTrajectoryPoint

Aug 21, 02 M.Asai (tracking-V04-01-01)
- G4TrackingManager.cc
  o Set fpTrajectory pointer to zero when the trajectory is deleted.

Aug 13, 02 M.Asai (tracking-V04-01-00)
- G4TrackingManager.hh, G4TrackingManager.cc