@@ -1,4 +1,4 @@
-$Id: History,v 1.44 2002-11-01 23:40:14 asaim Exp $
+$Id: History,v 1.45 2002-11-05 16:15:49 jacek Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+Nov 05, 2002, J.Generowicz
+- Renamed aTrajectory(Point)Allocator to aSmoothTrajectory(Point)Allocator
+  in the SmoothTrajectory(Point) classes.
 
 Nov 01, 2002, M.Asai (tracking-V04-01-04)
 - Merge tracking-V04-01-03 and tracking-V04-01-02.
